--- a/plugins/impex/jpeg/kis_wdg_options_jpeg.ui
+++ b/plugins/impex/jpeg/kis_wdg_options_jpeg.ui
@@ -336,7 +336,7 @@
        <item row="0" column="1">
         <widget class="QGroupBox" name="groupBox_2">
          <property name="title">
-          <string>Filters:</string>
+          <string comment="JPEG metadata filter">Filters:</string>
          </property>
          <layout class="QGridLayout">
           <item row="0" column="0">
