--- a/plugins/tools/basictools/wdgmovetool.ui
+++ b/plugins/tools/basictools/wdgmovetool.ui
@@ -143,7 +143,7 @@
          </sizepolicy>
         </property>
         <property name="text">
-         <string>Amount:</string>
+         <string comment="Amount of shortcut key movement for Move Tool">Amount:</string>
         </property>
        </widget>
       </item>
