Disambiguate Amount label for Transform tool.

--- a/plugins/tools/tool_transform2/wdg_tool_transform.ui
+++ b/plugins/tools/tool_transform2/wdg_tool_transform.ui
@@ -2010,7 +2010,7 @@
               </size>
              </property>
              <property name="text">
-              <string>Amount:</string>
+              <string comment="Amount of transformation">Amount:</string>
              </property>
             </widget>
            </item>
