--- a/libs/ui/forms/wdgrectangleconstraints.ui
+++ b/libs/ui/forms/wdgrectangleconstraints.ui
@@ -137,7 +137,7 @@
      <item row="2" column="1">
       <widget class="QLabel" name="label_3">
        <property name="text">
-        <string comment="Ratio of width and height">Ratio:</string>
+        <string>Ratio:</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
