--- a/plugins/generators/screentone/KisScreentoneConfigWidget.ui
+++ b/plugins/generators/screentone/KisScreentoneConfigWidget.ui
@@ -421,7 +421,7 @@
          <item row="2" column="0">
           <widget class="QLabel" name="labelInvert">
            <property name="text">
-            <string>Invert:</string>
+            <string comment="Swapping FG and BG color in the screentone pattern">Invert:</string>
            </property>
           </widget>
          </item>
