--- a/plugins/generators/multigridpattern/wdgmultigridpatternoptions.ui
+++ b/plugins/generators/multigridpattern/wdgmultigridpatternoptions.ui
@@ -53,7 +53,7 @@
        <item row="0" column="0">
         <widget class="QLabel" name="label_4">
          <property name="text">
-          <string>Line Width:</string>
+          <string comment="Line width of Multigridpattern generator">Line Width:</string>
          </property>
         </widget>
        </item>
