--- a/krita/krita.qrc
+++ b/krita/krita.qrc
@@ -1,12 +1,11 @@
-<!DOCTYPE RCC>
-<RCC version="1.0">
+<RCC>
     <qresource prefix="/kconfig">
         <file alias="kritarc">data/kritarc</file>
     </qresource>
     <qresource prefix="/kxmlgui5">
         <file alias="krita5.xmlgui">krita5.xmlgui</file>
     </qresource>
-    <qresource>
+    <qresource prefix="/">
         <file>pics/broken-preset.png</file>
         <file>pics/dark_layer-locked.png</file>
         <file>pics/dark_layer-unlocked.png</file>
@@ -70,6 +69,7 @@
         <file>pics/width.png</file>
         <file>pics/width_icon.png</file>
         <file>pics/workspace-chooser.png</file>
-
+        <file>pics/svg/light_diagonal-stripe.svg</file>
+        <file>pics/svg/light_diagonal-stripe.png</file>
     </qresource>
 </RCC>
