Change radius to radius logarithmic

--- a/plugins/paintops/mypaint/wdgmypaintoptions.ui
+++ b/plugins/paintops/mypaint/wdgmypaintoptions.ui
@@ -103,7 +103,7 @@
         </sizepolicy>
        </property>
        <property name="text">
-        <string>Radius:</string>
+        <string>Radius Logarithmic:</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
