--- a/plugins/impex/heif/WdgHeifExport.ui
+++ b/plugins/impex/heif/WdgHeifExport.ui
@@ -10,8 +10,8 @@
     <height>243</height>
    </rect>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout">
-   <item>
+  <layout class="QFormLayout" name="formLayout_2">
+   <item row="0" column="1">
     <widget class="QCheckBox" name="chkLossless">
      <property name="sizePolicy">
       <sizepolicy hsizetype="MinimumExpanding" vsizetype="Minimum">
@@ -30,7 +30,7 @@
      </property>
     </widget>
    </item>
-   <item>
+   <item row="1" column="0" colspan="2">
     <widget class="QGroupBox" name="lossySettings">
      <property name="title">
       <string>Lossy Advanced Settings</string>
@@ -56,7 +56,17 @@
      </layout>
     </widget>
    </item>
-   <item>
+   <item row="2" column="0">
+    <widget class="QLabel" name="label">
+     <property name="text">
+      <string>Chroma:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="1">
+    <widget class="QComboBox" name="cmbChroma"/>
+   </item>
+   <item row="5" column="0">
     <spacer name="verticalSpacer">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
