--- a/plugins/paintops/libpaintop/forms/wdgclipboardbrush.ui
+++ b/plugins/paintops/libpaintop/forms/wdgclipboardbrush.ui
@@ -118,7 +118,7 @@
         </widget>
        </item>
        <item row="1" column="1">
-        <widget class="KisSpacingSelectionWidget" name="spacingWidget" native="true"/>
+        <widget class="KisSpacingSelectionWidget" name="spacingWidget1" native="true"/>
        </item>
        <item row="3" column="1">
         <widget class="QCheckBox" name="preserveAlpha">
