--- a/plugins/dockers/recorder/recorderdocker.ui
+++ b/plugins/dockers/recorder/recorderdocker.ui
@@ -130,6 +130,18 @@
             </item>
             <item row="0" column="1">
              <widget class="QSpinBox" name="spinCaptureInterval">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="minimumSize">
+               <size>
+                <width>90</width>
+                <height>0</height>
+               </size>
+              </property>
               <property name="keyboardTracking">
                <bool>false</bool>
               </property>
@@ -155,7 +167,20 @@
              </widget>
             </item>
             <item row="1" column="1">
-             <widget class="KisSliderSpinBox" name="spinQuality" native="true"/>
+             <widget class="KisSliderSpinBox" name="spinQuality" native="true">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="minimumSize">
+               <size>
+                <width>90</width>
+                <height>0</height>
+               </size>
+              </property>
+             </widget>
             </item>
             <item row="2" column="0">
              <widget class="QLabel" name="labelResolution">
@@ -169,6 +194,18 @@
             </item>
             <item row="2" column="1">
              <widget class="QComboBox" name="comboResolution">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="minimumSize">
+               <size>
+                <width>90</width>
+                <height>0</height>
+               </size>
+              </property>
               <item>
                <property name="text">
                 <string>Original</string>
@@ -197,13 +234,8 @@
           </item>
           <item>
            <widget class="QLabel" name="labelHint">
-            <property name="font">
-             <font>
-              <pointsize>10</pointsize>
-             </font>
-            </property>
             <property name="text">
-             <string>Start recording after creating a new image or opening an existing one.</string>
+             <string>&lt;small&gt;Start recording after creating a new image or opening an existing one.&lt;/small&gt;</string>
             </property>
             <property name="wordWrap">
              <bool>true</bool>
