Fill Layer: preserve and restore dialog geometry

--- a/libs/ui/forms/wdgdlggeneratorlayer.ui
+++ b/libs/ui/forms/wdgdlggeneratorlayer.ui
@@ -22,7 +22,7 @@
     <verstretch>0</verstretch>
    </sizepolicy>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout" stretch="0,1">
+  <layout class="QVBoxLayout" name="verticalLayout">
    <property name="spacing">
     <number>8</number>
    </property>
@@ -49,7 +49,7 @@
    <item>
     <widget class="KisWdgGenerator" name="wdgGenerator" native="true">
      <property name="sizePolicy">
-      <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
+      <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
