Fixing layout, added icons for the links, added support-krita icon, show faint rectangles and placeholders for lists, disable welcome widget from MainWindow

--- a/krita/krita.qrc
+++ b/krita/krita.qrc
@@ -71,5 +71,6 @@
         <file>pics/workspace-chooser.png</file>
         <file>pics/svg/light_diagonal-stripe.svg</file>
         <file>pics/svg/light_diagonal-stripe.png</file>
+        <file>pics/support-krita.svg</file>
     </qresource>
 </RCC>
